pesquisa(precisa melhorar o regex) e requisições funcionando

--- a/client/index.html
+++ b/client/index.html
@@ -26,7 +26,36 @@
               {{/if}}
           </div> -->
 
-            <ng-include src="'client/nav.html'"></ng-include>
+          <div ng-controller="pesquisaController">
+              <div class="row" ng-show="{{loggedIn}}">
+                  <div id="menu" class="container margin-top-30">
+
+                      <div class="col-sm-2 col-xs-12 no-padding">
+                          <img src="/resources/Logo-Agripa.png" class="img-responsive">
+                      </div>
+
+                      <div class="col-sm-7 col-xs-12" style="margin-top: 18px;">
+                          <a class="btn btn-default" href="/meuPerfil"> Meu Perfil</a>
+                          <a class="btn btn-default" href="/empresas"> Empresas</a> <!--precisamos da tela :/ -->
+                          <a class="btn btn-default" href="/trajetoria-de-desenvolvimento"> Trajetórias</a>
+                          <a class="btn btn-default" href="/painel-controle"><i class="fa fa-gear" style="font-size: 1.20em;"></i></a> <!--G is for gear button-->
+                          <a href="/logout" class="btn btn-default"><i class="fa fa-power-off" style="font-size: 1.20em;"></i></a> <!-- for logout apparently-->
+                      </div>
+                      <form ng-submit="pesquisa()">
+                        <div class="col-sm-3 col-xs-12 no-padding" style="margin-top: 18px;">
+                            <div class="col-xs-10 no-padding">
+                                <input type="text" placeholder="Pesquisar" class="pesquisar" id="pesquisar" ng-model="query">
+                            </div>
+                            <div class="col-xs-2 no-padding" style="margin-left: -2px;">
+                                <button type="submit" class="button btn-pesquisar">
+                                <i class="fa fa-search" style="font-size: 1.40em;"></i></button><!--P for pesquisar-->
+                            </div>
+                        </div>
+                      </form>
+                  </div>
+              </div>
+          </div>
+
 
             <div ui-view></div>
 
