--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,7 @@
           </div> -->
 
           <div ng-controller="pesquisaController">
-              <div class="row" ng-show="{{loggedIn}}">
+              <div class="row" ng-show="verifyLogin()">
                   <div id="menu" class="container margin-top-30">
 
                       <div class="col-sm-2 col-xs-12 no-padding">
