- Tela da Empresa. Barra de controle alteranativa para empresas.

--- a/client/index.html
+++ b/client/index.html
@@ -27,8 +27,8 @@
           </div> -->
 
           <div ng-controller="pesquisaController">
-              <div class="row" ng-show="verifyLogin()">
-                  <div id="menu" class="container margin-top-30">
+              <div class="row body-side-padding" ng-show="verifyLogin()">
+                  <div id="menu" class="margin-top-30">
 
                       <div class="col-sm-2 col-xs-12 no-padding">
                           <img src="/resources/Logo-Agripa.png" class="img-responsive">
