--- a/client/barra-controle.html
+++ b/client/barra-controle.html
@@ -14,13 +14,13 @@
             </div>
 
             <div class="col-xs-9 identification">
-                <span style="font-size: 0.77em;">{{profileTitle}}</span>
+                <span style="font-size: 0.77em;">{{profileTitle || 'Titulo'}}</span>
                 <br>
 
-                <span style="font-size: 1.20em;">{{$root.currentUser.profile.name}}</span>
+                <span style="font-size: 1.20em;">{{$root.currentUser.profile.name || 'Nome'}}</span>
                 <br>
 
-                <span style="font-size:0.77em;">{{$root.currentUser.emails[0].address}}</span>
+                <span style="font-size:0.77em;">{{$root.currentUser.emails[0].address || 'Endereço'}}</span>
                 <br>
             </div>
 
@@ -56,7 +56,7 @@
 
                     <!--Trexo diferenciado-->
                     <!--<b class="horas-mentorias" style="">
-                        {{user.profile.horasMentorias}} hs
+                        {{user.profile.horasMentorias || '0'}} hs
                     </b>
 
                     <p>
@@ -66,7 +66,7 @@
 
                 <div class="col-xs-6 text-center">
                     <b class="horas-mentorias" style="">
-                        {{user.profile.badges.length}}
+                        {{user.profile.badges.length || '0'}}
                     </b>
 
                     <p>
@@ -78,7 +78,7 @@
 
         <div class="col-xs-5 col-sm-4 profile-boxes border-white descricao">
             <p>
-                {{user.profile.breve_descricao}}
+                {{user.profile.breve_descricao || 'Descrição'}}
             </p>
         </div>
 
@@ -92,7 +92,7 @@
             <p>
                 <button class="btn btn-default profile-actions">
                     <span class="legenda"><i class="fa fa-commenting-o"></i> <span class="hidden-xs">Mensagens</span></span>
-                    <span class="numero"></span>
+                    <span class="numero">0</span>
                 </button>
             </p>
             <p>
@@ -104,7 +104,7 @@
             <p>
                 <button class="btn btn-default profile-actions">
                     <span class="legenda"><i class="fa fa-group"></i> <span class="hidden-xs">Ações de mentoria</span></span>
-                    <span class="numero">{{$root.currentUser.profile.requisicoes.length}}</span>
+                    <span class="numero">{{$root.currentUser.profile.requisicoes.length || '0'}}</span>
                 </button>
             </p>
         </div>
